fixed grid spacing on browse page when there are less than 16 results

--- a/react-app/src/components/browsePage/BrowsePage.css
+++ b/react-app/src/components/browsePage/BrowsePage.css
@@ -32,6 +32,7 @@
     display: flex;
     margin-top: 30px;
     width: 75%;
+    min-height: 860px;
 
 }
 
@@ -53,6 +54,8 @@
 
     display: grid;
     grid-template-columns: repeat(4, 160px);
+    grid-template-rows: repeat(4, 215px);
+
     justify-content: center;
     margin-top: 20px;
     margin-bottom: 50px;
